<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.benavent.banco.MenuActivity"
    android:orientation="vertical"
    android:weightSum="1">



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07">

        <TextView
            android:text="@string/bienvenida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNombre"
            android:layout_weight="6.86" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0">



    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.07">

        <Button
            style="@style/Botones"
            android:text="@string/posicion"
            android:id="@+id/button1"
            android:layout_weight="1"
            android:elevation="0dp"
            android:layout_marginTop="29dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/button2"
            android:onClick="goToGlobal"/>

        <Button
            style="@style/Botones"
            android:text="@string/ingresos"
            android:id="@+id/button2"
            android:layout_weight="1"
            android:layout_below="@+id/button1"
            android:layout_alignStart="@+id/button3"
            android:onClick="goToIngresos"/>

        <Button
            style="@style/Botones"
            android:text="@string/cambiarpass"
            android:id="@+id/button3"
            android:layout_weight="1"
            android:layout_below="@+id/button2"
            android:layout_alignStart="@+id/button4"
            android:onClick="goToPass" />

        <Button
            style="@style/Botones"
            android:text="@string/cuentas"
            android:id="@+id/button4"
            android:layout_weight="1"
            android:layout_below="@+id/button3"
            android:layout_alignStart="@+id/button5"
            android:onClick="goToCuentas"/>

        <Button
            style="@style/Botones"
            android:text="@string/movimientos"
            android:id="@+id/button5"
            android:layout_weight="1"
            android:layout_below="@+id/button4"
            android:layout_alignStart="@+id/button6"
            android:onClick="goToMovimiento"
            />

        <!--<Button-->
            <!--style="@style/Botones"-->
            <!--android:text="@string/texto"-->
            <!--android:id="@+id/button6"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_below="@+id/button5"-->
            <!--android:layout_alignStart="@+id/button7" />-->

        <Button
            style="@style/Botones"
            android:text="@string/salir"
            android:id="@+id/button7"
            android:layout_weight="1"
            android:layout_below="@+id/button5"
            android:layout_centerHorizontal="true"
            android:onClick="getToMain" />

        <Button
            style="@style/Botones"
            android:text="Transferencias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button10"
            android:layout_marginTop="21dp"
            android:layout_below="@+id/button7"
            android:layout_centerHorizontal="true"
            android:onClick="getToTransferencias"/>

    </RelativeLayout>

</LinearLayout>
