<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.benavent.banco.LoginActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="135dp"
        android:id="@+id/textView3" />

    <TextView
        android:text="@string/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textView3"
        android:id="@+id/textView4" />

    <Button
        style="@style/Botones"
        android:text="@string/entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="getToMenu"
        android:id="@+id/button"
        android:layout_marginBottom="19dp"
        android:layout_above="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtPass"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtUser"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentEnd="true" />

    <Button
        style="@style/Botones"
        android:text="@string/salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="getToMain"
        android:id="@+id/button2"
        android:layout_marginBottom="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
